k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petstore-worker
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: petstore-worker
